add new changes in footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-<header>
+<!-- <header>
      <div class="nav-container">
         <nav class="navbar">
             <a class="navbar-logo" href="#wrap-contact__boxes">
@@ -29,7 +29,7 @@
                 <li class="nav-menu__item"><a href="#mobile" class="nav-links">Aktualności</a></li>
                 <li class="nav-menu__item"><a href="#we" class="nav-links">O nas</a></li>
                 <li class="nav-menu__item"><a href="#join_us" class="nav-links">Kontakt</a></li>
-                <li class="nav-menu__item"><a href="https://www.facebook.com" class="nav-links"><img src="images/home/Facebook_Icon.jpg" alt="cart"/></a></li>
+                <li class="nav-menu__item"><a href="https://www.facebook.com" class="nav-links"><img src="images/home/Facebook_Icon.png" alt="cart"/></a></li>
             </ul>
           
         </nav>
@@ -195,7 +195,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <section class="join_us" id="join_us">
     <div class="container">
         <div class="people">
@@ -206,13 +206,9 @@
     <div class="thinks">
         <div class="container">
             <div class="thinks_sentence">
-                <h2>Lorem ipsum dolor sit amet, lacus ac,in <b> ultricies ultricies</b> fringilla luctus
-                    in, mauris facilisi.
-                    Orci aliquam velit <b>consequatur </b>non vel, dictum litora, elementum dictum,
-                    libero lobortis.
-                    Mollis
-                    sit
-                    ac <b>fermentum </b>enim facilisis et, lacinia tempus vel ut. </h2>
+                <h2>Lorem ipsum dolor sit amet, lacus ac,in <b> ultricies ultricies</b> fringilla luctus in, mauris facilisi.
+                    Orci aliquam velit <b>consequatur </b>non vel, dictum litora, elementum dictum,libero lobortis.
+                    Mollis sit ac <b>fermentum </b>enim facilisis et, lacinia tempus vel ut. </h2>
                 <p>Jonathan Doe</p>
                 <a href="#" class="thinks_sentence__information"><span class="thinks_sentence__information-text">dowiedz się więcej o firmie</span> </a>
             </div>
