--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -13,49 +12,48 @@
     <link rel="stylesheet" href="style.css" />
     <script src='main.js'></script>
 </head>
-
 <body>
-   <header>
-     <div class="nav-container">
-        <nav class="navbar">
-            <a class="navbar-logo" href="#wrap-contact__boxes">
-                <img id="navbar-logo" src="images/home/rorun_logo.jpg" alt="logo"/></a>
-            <div class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="nav-menu">
-                <li class="nav-menu__item"><a href="#banner" class="nav-links">O nas</a></li>
-                <li class="nav-menu__item"><a href="#mobile" class="nav-links">Aktualności</a></li>
-                <li class="nav-menu__item"><a href="#we" class="nav-links">O nas</a></li>
-                <li class="nav-menu__item"><a href="#join-us" class="nav-links">Kontakt</a></li>
-                <li class="nav-menu__item"><a href="https://www.facebook.com" class="nav-links"><img src="images/home/Facebook_Icon.png" alt="cart"/></a></li>
-            </ul>
-          
-        </nav>
-    </div>
-</header>
-<section class="banner" id="banner">
-    <div class="container">
-        <div class="banner_aplication">
-            <h1 class="banner_aplication__headingOne">O nas</h1>
-            <h2 class="banner_aplication__headingTwo">i naszej aplikacji</h2>
-            <h3 class="banner_aplication__headingThree">Rorun to bezpłatna aplikacja i strona internetowa,<br>
-                która bawi i motuwuje do uprawiania sportu</h3>
-            <a href="#page" class="banner_aplication__page">www.rorun.com</a>
+    <header>
+        <div class="nav-container">
+            <nav class="navbar">
+                <a class="navbar-logo" href="#wrap-contact__boxes">
+                    <img id="navbar-logo" src="images/home/rorun_logo.jpg" alt="logo" /></a>
+                <div class="menu-toggle" id="mobile-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="nav-menu">
+                    <li class="nav-menu__item"><a href="#banner" class="nav-links">O nas</a></li>
+                    <li class="nav-menu__item"><a href="#mobile" class="nav-links">Aktualności</a></li>
+                    <li class="nav-menu__item"><a href="#we" class="nav-links">O nas</a></li>
+                    <li class="nav-menu__item"><a href="#join-us" class="nav-links">Kontakt</a></li>
+                    <li class="nav-menu__item"><a href="https://www.facebook.com" class="nav-links"><img
+                                src="images/home/Facebook_Icon.png" alt="cart" /></a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
-</section>
+    </header>
+    <section class="banner" id="banner">
+        <div class="container">
+            <div class="banner_aplication">
+                <h1 class="banner_aplication__headingOne">O nas</h1>
+                <h2 class="banner_aplication__headingTwo">i naszej aplikacji</h2>
+                <h3 class="banner_aplication__headingThree">Rorun to bezpłatna aplikacja i strona internetowa,<br>
+                    która bawi i motywuje do uprawiania sportu</h3>
+                <a href="#page" class="banner_aplication__page">www.rorun.com</a>
+            </div>
+        </div>
+    </section>
     <section class="mobile" id="mobile">
         <div class="container">
             <div class="mobile_wrapper">
                 <h2 class="mobile_wrapper__headingTwo">Rorun</h2>
                 <h3 class="mobile_wrapper__headingThree">Czym jest aplikacja?</h3>
-                <p class="mobile_wrapper__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                Fusce tempor sem lectus, eu placerat
-                tellus cursus id.
+                <p class="mobile_wrapper__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Fusce tempor sem lectus, eu placerat
+                    tellus cursus id.
                 </p>
             </div>
             <div class="mobile_telephone">
@@ -76,7 +74,8 @@
                 </div>
             </div>
             <div class="mobile_training">
-                <p class="mobile_training__paragraph"> Croissant sweet pastry cheesecake tart cookie sugar plum. Dessert carrot cake
+                <p class="mobile_training__paragraph"> Croissant sweet pastry cheesecake tart cookie sugar plum. Dessert
+                    carrot cake
                     soufflé cookie.
                     Pie tiramisu carrot cake jelly topping. Halvah macaroon jelly beans lollipop tart. Carrot cake
                     biscuit jelly beans wafer marshmallow. Dragée topping icing powder chupa chups marzipan
@@ -99,16 +98,19 @@
             <div class="container">
                 <div class="occasion_wrapper">
                     <div class="occasion_wrapper__view-item">
-                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <span>diam</span></h1>
-                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_2.jpg" alt="telefon-ikona 1">
+                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <br><span>diam</span></h1>
+                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_2.jpg"
+                            alt="telefon-ikona 1">
                     </div>
                     <div class="occasion_wrapper__view-item">
-                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <span>diam</span></h1>
-                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_3.jpg" alt="telefon-ikona 2">
+                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <br><span>diam</span></h1>
+                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_3.jpg"
+                            alt="telefon-ikona 2">
                     </div>
                     <div class="occasion_wrapper__view-item">
-                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <span>diam</span></h1>
-                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_4.jpg" alt="telefon-ikona 3">
+                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <br><span>diam</span></h1>
+                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_4.jpg"
+                            alt="telefon-ikona 3">
                     </div>
                 </div>
             </div>
