using BEM motodology

--- a/index.html
+++ b/index.html
@@ -14,102 +14,102 @@
 </head>
 <body>
     <header>
-        <div class="nav-container">
-            <nav class="navbar">
-                <a class="navbar-logo" href="#wrap-contact__boxes">
-                    <img id="navbar-logo" src="images/home/rorun_logo.jpg" alt="logo" /></a>
-                <div class="menu-toggle" id="mobile-menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
+        <div class="nav__container">
+            <nav class="nav__container-navbar">
+                <a class="nav__logo" href="#wrap-contact__boxes">
+                    <img id="nav__logo" src="images/home/rorun_logo.jpg" alt="logo" /></a>
+                <div class="nav__toggle" id="nav__toggle">
+                    <span class="nav__toggle-bar"></span>
+                    <span class="nav__toggle-bar"></span>
+                    <span class="nav__toggle-bar"></span>
+                    <span class="nav__toggle-bar"></span>
                 </div>
-                <ul class="nav-menu">
-                    <li class="nav-menu__item"><a href="#banner" class="nav-links">O nas</a></li>
-                    <li class="nav-menu__item"><a href="#mobile" class="nav-links">Aktualności</a></li>
-                    <li class="nav-menu__item"><a href="#we" class="nav-links">O nas</a></li>
-                    <li class="nav-menu__item"><a href="#join-us" class="nav-links">Kontakt</a></li>
-                    <li class="nav-menu__item"><a href="https://www.facebook.com" class="nav-links"><img
+                <ul class="nav__menu">
+                    <li class="nav__menu-item"><a href="#banner" class="nav__menu-links">O nas</a></li>
+                    <li class="nav__menu-item"><a href="#mobile" class="nav__menu-links">Aktualności</a></li>
+                    <li class="nav__menu-item"><a href="#we" class="nav__menu-links">O nas</a></li>
+                    <li class="nav__menu-item"><a href="#join-us" class="nav__menu-links">Kontakt</a></li>
+                    <li class="nav__menu-item"><a href="https://www.facebook.com" class="nav__menu-links"><img
                                 src="images/home/Facebook_Icon.png" alt="cart" /></a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <section class="banner" id="banner">
-        <div class="container">
-            <div class="banner_aplication">
-                <h1 class="banner_aplication__headingOne">O nas</h1>
-                <h2 class="banner_aplication__headingTwo">i naszej aplikacji</h2>
-                <h3 class="banner_aplication__headingThree">Rorun to bezpłatna aplikacja i strona internetowa,<br>
+        <div class="banner__container">
+            <div class="banner__aplication">
+                <h1 class="banner__aplication-headingOne">O nas</h1>
+                <h2 class="banner__aplication-headingTwo">i naszej aplikacji</h2>
+                <h3 class="banner__aplication-headingThree">Rorun to bezpłatna aplikacja i strona internetowa,<br>
                     która bawi i motywuje do uprawiania sportu</h3>
-                <a href="#page" class="banner_aplication__page">www.rorun.com</a>
+                <a href="#page" class="banner__aplication-page">www.rorun.com</a>
             </div>
         </div>
     </section>
     <section class="mobile" id="mobile">
-        <div class="container">
-            <div class="mobile_wrapper">
-                <h2 class="mobile_wrapper__headingTwo">Rorun</h2>
-                <h3 class="mobile_wrapper__headingThree">Czym jest aplikacja?</h3>
-                <p class="mobile_wrapper__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        <div class="mobile__container">
+            <div class="mobile__wrapper">
+                <h2 class="mobile__wrapper-headingTwo">Rorun</h2>
+                <h3 class="mobile__wrapper-headingThree">Czym jest aplikacja?</h3>
+                <p class="mobile__wrapper-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Fusce tempor sem lectus, eu placerat
                     tellus cursus id.
                 </p>
             </div>
-            <div class="mobile_telephone">
-                <img class="mobile_telephone__phone" src="images/about_us/img_1.jpg" alt="phone">
-                <div class="mobile_telephone__list">
-                    <div class="mobile_telephone__list-items">
-                        <h2 class="mobile_telephone__list-items-headingTwo">4085</h2>
-                        <p class="mobile_telephone__list-items-paragraph">Kraków dzisiaj</p>
+            <div class="mobile__telephone">
+                <img class="mobile__telephone-phone" src="images/about_us/img_1.jpg" alt="phone">
+                <div class="mobile__telephone-list">
+                    <div class="mobile__telephone-items">
+                        <h2 class="mobile__telephone-headingTwo">4085</h2>
+                        <p class="mobile__telephone-paragraph">Kraków dzisiaj</p>
                     </div>
-                    <div class="mobile_telephone__list-items">
-                        <h2 class="mobile_telephone__list-items-headingTwo">107</h2>
-                        <p class="mobile_telephone__list-items-paragraph">średnie tętno</p>
+                    <div class="mobile__telephone-items">
+                        <h2 class="mobile__telephone-headingTwo">107</h2>
+                        <p class="mobile__telephone-paragraph">średnie tętno</p>
                     </div>
-                    <div class="mobile_telephone__list-items">
-                        <h2 class="mobile_telephone__list-items-headingTwo">977</h2>
-                        <p class="mobile_telephone__list-items-paragraph">spalone kalorie</p>
+                    <div class="mobile__telephone-items">
+                        <h2 class="mobile__telephone-headingTwo">977</h2>
+                        <p class="mobile__telephone-paragraph">spalone kalorie</p>
                     </div>
                 </div>
             </div>
-            <div class="mobile_training">
-                <p class="mobile_training__paragraph"> Croissant sweet pastry cheesecake tart cookie sugar plum. Dessert
+            <div class="mobile__training">
+                <p class="mobile__training-paragraph"> Croissant sweet pastry cheesecake tart cookie sugar plum. Dessert
                     carrot cake
                     soufflé cookie.
                     Pie tiramisu carrot cake jelly topping. Halvah macaroon jelly beans lollipop tart. Carrot cake
                     biscuit jelly beans wafer marshmallow. Dragée topping icing powder chupa chups marzipan
-                    croissant. Danish muffin ice cream toffee topping cake sweet roll. Sesame snaps chocolate bar
-                    muffin chocolate bar. Liquorice sweet oat cake donut donut. Soufflé pudding biscuit sesame
+                    croissant. Danish muffin ice cream toffee topping cake sweet roll. Sesame snaps chocolate nav-container__menu-bar
+                    muffin chocolate nav-container__menu-bar. Liquorice sweet oat cake donut donut. Soufflé pudding biscuit sesame
                     snaps. Liquorice sweet tootsie roll pie biscuit apple pie. Pastry jelly halvah pudding jelly-o.
                     <span></span>
                     Danish cotton candy toffee sweet. Candy canes danish ice cream apple pie. Pastry ice cream
                     toffee. Pastry wafer sesame snaps jelly-o. Candy canes danish jelly beans topping cake apple
-                    pie. Pastry chocolate bar cupcake chocolate bar caramels halvah sweet roll gummies. Liquorice
-                    candy canes marshmallow chocolate bar. Jelly beans marshmallow pastry carrot cake halvah jelly
+                    pie. Pastry chocolate nav-container__menu-bar cupcake chocolate nav-container__menu-bar caramels halvah sweet roll gummies. Liquorice
+                    candy canes marshmallow chocolate nav-container__menu-bar. Jelly beans marshmallow pastry carrot cake halvah jelly
                     beans soufflé chupa chups marzipan. Gummies caramels pastry toffee sugar plum cupcake biscuit
                     brownie pastry. Soufflé dessert sweet marzipan cheesecake. Jujubes macaroon marshmallow. Cupcake
-                    ice cream lollipop chocolate bar pudding liquorice gingerbread pudding. Oat cake brownie jelly-o
+                    ice cream lollipop chocolate nav-container__menu-bar pudding liquorice gingerbread pudding. Oat cake brownie jelly-o
                     apple pie. Cake liquorice macaroon danish gummi bears topping.
                 </p>
             </div>
         </div>
         <div class="occasion">
-            <div class="container">
-                <div class="occasion_wrapper">
-                    <div class="occasion_wrapper__view-item">
-                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <br><span>diam</span></h1>
-                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_2.jpg"
+            <div class="occasion__container">
+                <div class="occasion__wrapper">
+                    <div class="occasion__wrapper-item">
+                        <h1 class="occasion__wrapper-heading">Dictum tincidunt <br><span>diam</span></h1>
+                        <img class="occasion__wrapper-img" src="images/about_us/img_2.jpg"
                             alt="telefon-ikona 1">
                     </div>
-                    <div class="occasion_wrapper__view-item">
-                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <br><span>diam</span></h1>
-                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_3.jpg"
+                    <div class="occasion__wrapper-item">
+                        <h1 class="occasion__wrapper-heading">Dictum tincidunt <br><span>diam</span></h1>
+                        <img class="occasion__wrapper-img" src="images/about_us/img_3.jpg"
                             alt="telefon-ikona 2">
                     </div>
-                    <div class="occasion_wrapper__view-item">
-                        <h1 class="occasion_wrapper__view-item-heading">Dictum tincidunt <br><span>diam</span></h1>
-                        <img class="occasion_wrapper__view-item-img" src="images/about_us/img_4.jpg"
+                    <div class="occasion__wrapper-item">
+                        <h1 class="occasion__wrapper-heading">Dictum tincidunt <br><span>diam</span></h1>
+                        <img class="occasion__wrapper-img" src="images/about_us/img_4.jpg"
                             alt="telefon-ikona 3">
                     </div>
                 </div>
@@ -117,41 +117,41 @@
         </div>
     </section>
     <section class="we" id="we">
-        <div class="container">
-            <div class="we_life">
-                <h2 class="we_life__headingTwo">Nasz zespół </h2>
-                <h3 class="we_life__headingThree">Lorem ipsum</h3>
+        <div class="we__container">
+            <div class="we__life">
+                <h2 class="we__life-headingTwo">Nasz zespół </h2>
+                <h3 class="we__life-headingThree">Lorem ipsum</h3>
             </div>
         </div>
-        <div class="we_gallery">
-            <div class="container">
-                <div class="we_gallery__wrapper">
-                    <div class="we_gallery__wrapper-photo">
+        <div class="we__gallery">
+            <div class="we__container">
+                <div class="we__gallery-wrapper">
+                    <div class="we__gallery-photo">
                         <img src="images/about_us//team1.jpg" alt="member CEO">
                         <h1> Jonathan Doe</h1>
                         <h2>CEO</h2>
                     </div>
-                    <div class="we_gallery__wrapper-photo">
+                    <div class="we__gallery-photo">
                         <img src="images/about_us//team2.jpg" alt="member CEO">
                         <h1> Jaden Doe</h1>
                         <h2>UX</h2>
                     </div>
-                    <div class="we_gallery__wrapper-photo">
+                    <div class="we__gallery-photo">
                         <img src="images/about_us//team3.jpg" alt="member_CEO">
                         <h1> Ann Doe</h1>
                         <h2>UX</h2>
                     </div>
-                    <div class="we_gallery__wrapper-photo">
+                    <div class="we__gallery-photo">
                         <img src="images/about_us/team4.jpg" alt="member UI">
                         <h1> Sabina Doe</h1>
                         <h2>UI</h2>
                     </div>
-                    <div class="we_gallery__wrapper-photo">
+                    <div class="we__gallery-photo">
                         <img src="images/about_us/team5.jpg" alt="member Assistance CEO">
                         <h1> Caterina Doe</h1>
                         <h2>Assistance CEO</h2>
                     </div>
-                    <div class="we_gallery__wrapper-photo">
+                    <div class="we__gallery-photo">
                         <img src="images/about_us/team6.jpg" alt="member UX">
                         <h1> Jonathan Doe</h1>
                         <h2>UX</h2>
@@ -162,9 +162,9 @@
     </section>
     <section>
         <div class="words">
-            <div class="container">
-                <div class="words_training">
-                    <p class="words_training__paragraph"> Croissant sweet pastry cheesecake tart cookie sugar plum.
+            <div class="words__container">
+                <div class="words__training">
+                    <p class="words__training-paragraph"> Croissant sweet pastry cheesecake tart cookie sugar plum.
                         Dessert
                         carrot cake soufflé cookie. Pie
                         tiramisu carrot cake jelly topping. Halvah macaroon jelly beans lollipop tart.
@@ -173,8 +173,8 @@
                         marzipan
                         croissant. Danish muffin ice cream toffee topping cake sweet roll. Sesame snaps
                         chocolate
-                        bar
-                        muffin chocolate bar. Liquorice sweet oat cake donut donut. Soufflé pudding biscuit
+                        nav-container__menu-bar
+                        muffin chocolate nav-container__menu-bar. Liquorice sweet oat cake donut donut. Soufflé pudding biscuit
                         sesame
                         snaps. Liquorice sweet tootsie roll pie biscuit apple pie. Pastry jelly halvah
                         pudding
@@ -184,9 +184,9 @@
                         cream
                         toffee. Pastry wafer sesame snaps jelly-o. Candy canes danish jelly beans topping
                         cake apple
-                        pie. Pastry chocolate bar cupcake chocolate bar caramels halvah sweet roll gummies.
+                        pie. Pastry chocolate nav-container__menu-bar cupcake chocolate nav-container__menu-bar caramels halvah sweet roll gummies.
                         Liquorice
-                        candy canes marshmallow chocolate bar. Jelly beans marshmallow pastry carrot cake
+                        candy canes marshmallow chocolate nav-container__menu-bar. Jelly beans marshmallow pastry carrot cake
                         halvah
                         jelly
                         beans soufflé chupa chups marzipan. Gummies caramels pastry toffee sugar plum
@@ -195,7 +195,7 @@
                         brownie pastry. Soufflé dessert sweet marzipan cheesecake. Jujubes macaroon
                         marshmallow.
                         Cupcake
-                        ice cream lollipop chocolate bar pudding liquorice gingerbread pudding. Oat cake
+                        ice cream lollipop chocolate nav-container__menu-bar pudding liquorice gingerbread pudding. Oat cake
                         brownie
                         jelly-o
                         apple pie. Cake liquorice macaroon danish gummi bears topping.
@@ -205,32 +205,32 @@
         </div>
     </section>
     <section class="join-us" id="join-us">
-        <div class="container">
-            <div class="join-us_people">
-                <h2 class="join-us_people__headingTwo">Dołacz do nas</h2>
-                <h3 class="join-us_people__headingThree">Apikuj już dziś</h3>
+        <div class="join-us__container">
+            <div class="join-us__people">
+                <h2 class="join-us__people-headingTwo">Dołacz do nas</h2>
+                <h3 class="join-us__people-headingThree">Apikuj już dziś</h3>
             </div>
         </div>
         <div class="thinks">
-            <div class="container">
-                <div class="thinks_sentence">
-                    <h2 class="thinks_sentence__headingTwo">Lorem ipsum dolor sit amet, lacus ac,in <strong> ultricies
+            <div class="thinks__container">
+                <div class="thinks__sentence">
+                    <h2 class="thinks__sentence-headingTwo">Lorem ipsum dolor sit amet, lacus ac,in <strong> ultricies
                             ultricies</strong> fringilla luctus in, mauris facilisi.
                         Orci aliquam velit <strong>consequatur </strong>non vel, dictum litora, elementum dictum,libero
                         lobortis.
                         Mollis sit ac <strong>fermentum </strong>enim facilisis et, lacinia tempus vel ut. </h2>
-                    <p class="thinks_sentence__paragraph">Jonathan Doe</p>
-                    <a href="#" class="thinks_sentence__information"><span
-                            class="thinks_sentence__information-text">Poznaj firmę</span></a>
+                    <p class="thinks__sentence-paragraph">Jonathan Doe</p>
+                    <a href="#" class="thinks__sentence-information"><span
+                            class="thinks__sentence-text">Poznaj firmę</span></a>
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="container">
-                <div class="footer">
-                    <p class="footer_paragraph">© 2020 Rorun. All right reserved.</p>
-                    <a class="footer_arrow"><img src="images/home/up_arrow.png" alt="arrow" /></a>
-                    <a class="footer_cart">
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__items">
+                    <p class="footer__items-paragraph">© 2020 Rorun. All right reserved.</p>
+                    <a class="footer__items-arrow"><img class="footer__items-img" src="images/home/up_arrow.png" alt="arrow" /></a>
+                    <a class="footer__items-card">
                         <img src="images/home/Facebook_Icon2.png" alt="cart" /> </a>
                 </div>
             </div>
