--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <script src='main.js'></script>
+    <link rel="stylesheet" href="css/style.css" />
+    
 </head>
 <body>
     <header>
@@ -236,6 +236,6 @@
             </div>
         </footer>
     </section>
-    <script src="script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
